--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.7",
     "@starknet-react/chains": "^4.0.2",
     "@starknet-react/core": "^4.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide": "^0.541.0",
     "lucide-react": "^0.488.0",
-    "next": "15.3.0",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "starknet": "^7.6.4",
     "starknetkit": "^3.0.3",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
